# ATLAS

./: .env.example  .gitignore  AUDIT_ACTION_PLAN.md  README.md  SOUR.md  pyproject.toml  test_system.py
.claude/: settings.local.json
atlas/: __init__.py  config.py  main.py
atlas/agents/: __init__.py  base.py  bus.py  coordinator.py  models.py  roles.py  tests.py
atlas/autonomy/: __init__.py  attention.py  budget.py  gating.py  learning.py  logger.py  loop.py  models.py  modes.py  reasoner.py  scoring.py  signals.py
atlas/continuity/: __init__.py  integration.py  models.py  threads.py
atlas/control/: __init__.py  applescript.py  ax_control.py  capability.py  models.py  playwright_ctrl.py  router.py
atlas/core/: approval.py  command_router.py  engine.py  executor.py  llm_queue.py  model_router.py  models.py  orchestrator.py  redact.py  secrets.py  shell_policy.py  test_taint_propagation.py  tests.py  trace.py
atlas/improvement/: __init__.py  analyzer.py  engine.py  models.py  monitor.py  tests.py
atlas/integrations/: __init__.py  base.py  calendar.py  gmail.py  health.py  imessage.py  manager.py  tests.py
atlas/interfaces/: cli.py  presence.py  voice.py
atlas/memory/: __init__.py  feedback.py  semantic.py  snapshots.py  store.py
atlas/perception/: __init__.py  daemon.py  monitor.py  privacy.py  screen.py  vision.py  world_state.py
atlas/planning/: __init__.py  engine.py  inference.py  models.py  replanner.py  schema.py  store.py  tests.py
atlas/proactive/: __init__.py  batcher.py  budget.py  engine.py  learning.py  (+2 more)
scripts/: install_voice.sh
(+41 files in other folders)
