[project]
name = "atlas"
version = "0.2.0"
description = "ATLAS — Local Execution Intelligence System"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=1.0.0",
    "groq>=0.9.0",
    "rich>=13.9.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.28.0",
]

[project.optional-dependencies]
mac = [
    "pyobjc-framework-Cocoa>=10.0",
    "pyobjc-framework-Quartz>=10.0",
    "pyobjc-framework-ApplicationServices>=10.0",
]
ocr = [
    "rapidocr-onnxruntime>=1.3.0",
]
semantic = [
    "sentence-transformers>=2.2.0",
]
browser = [
    "playwright>=1.40.0",
]
files = [
    "watchdog>=4.0.0",
]
voice = [
    "faster-whisper>=1.0.0",
    "pyaudio>=0.2.14",
    "elevenlabs>=1.0.0",
]
all = [
    "atlas[mac,ocr,semantic,browser,files,voice]",
]

[project.scripts]
atlas = "atlas.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
